# wordcab-transcribe

./: .dockerignore  .env  .env.production  .gitignore  Dockerfile  README.md  pyproject.toml
app/: automate.py  config.py  dependencies.py  logging.py  main.py  models.py  utils.py
app/assets/: demo.html
app/router/: authentication.py
app/router/v1/: audio_file_endpoint.py  audio_url_endpoint.py  diarize_endpoint.py  endpoints.py  live_endpoint.py  manage_remote_url.py  transcribe_endpoint.py
app/services/: asr_service.py  post_processing_service.py  transcribe_service.py  vad_service.py
app/services/alignment/: align_service.py
app/services/diarization/: clustering_module.py  diarize_service.py  models.py  modules.py  segmentation_module.py  utils.py
app/services/longform_diarization/: diarize_service.py  utils.py
app/services/longform_diarization/configs/: general.json
scripts/: convert_whisper_model.py
src/wordcab_transcribe/: automate.py  config.py  dependencies.py  main.py  models.py  utils.py
src/wordcab_transcribe/router/: authentication.py
src/wordcab_transcribe/router/v1/: audio_file_endpoint.py  audio_url_endpoint.py  diarize_endpoint.py  endpoints.py  live_endpoint.py  manage_remote_url.py  transcribe_endpoint.py
src/wordcab_transcribe/services/: asr_service.py  concurrency_services.py  post_processing_service.py  transcribe_service.py  vad_service.py
src/wordcab_transcribe/services/alignment/: models.py
src/wordcab_transcribe/services/diarization/: clustering_module.py  diarize_service.py  models.py  segmentation_module.py
src/wordcab_transcribe/services/longform_diarization/: diarize_service.py
src/wordcab_transcribe/services/longform_diarization/configs/: meeting.json  telephonic.json
