[tool.poetry]
name = "whisper-api"
version = "0.5.3"
description = "💬 ASR FastAPI server using faster-whisper and Auto-Tuning Spectral Clustering for diarization."
authors = [
  "Aleksander Smechov <aleks@wordcab.com>",
  "Thomas Chaigneau <info@wordcab.com>",
  "teamclouday <teamclouday@gmail.com>",
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.11,<3.13"
aiohttp = "^3.11.14"
aiofiles = "^24.1.0"
faster-whisper = "^1.1.1"
loguru = "^0.7.3"
numpy = "^2.2.4"
pandas = "^2.2.3"
fastapi = "^0.115.12"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
websockets = "^15.0.1"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.0"
soundfile = "^0.13.1"
nltk = "^3.9.1"
python-jose = { extras = ["cryptography"], version = "^3.4.0" }
shortuuid = "^1.0.13"
torch = "2.2.2"
torchaudio = "2.2.2"
transformers = "^4.50.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
ipython = "^9.0.2"


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL", "RET504"]
ignore = ["D", "C901", "BLE001", "ANN401", "RET505", "TC002", "ERA001"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
